replaced the decimal button with a reset button

--- a/calculator.html
+++ b/calculator.html
@@ -64,8 +64,8 @@
                 <button class="button" onclick="incrNum('0')">
                     0
                 </button>
-                <button class="button" onclick="">
-                    .
+                <button class="button" onclick="reset()">
+                    reset
                 </button>
                 <button class="button" onclick="add()">
                     +
